# template-uv

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  LICENSE  README.md  mkdocs.yml  pyproject.toml  tbump.toml
.cursor/: index.mdc
.cursor/rules/: django.mdc  streamlit.mdc  terraform.mdc
.cursor/rules/python/: code_style.mdc  error_handling.mdc  planning_practices.mdc  project_specific.mdc  python_specifics.mdc  testing.mdc
.cursor/skills/draft-readme/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/rulesets/: Protect Develop Ruleset.json  Protect Main Ruleset.json
.github/workflows/: bump-minor-version.yml  docker-build.yml  docker-test.yml  python-test.yml  release.yml
docs/: index.md  template.md
docs/how-to/: ci-cd.md  dev-env.md  documentation.md  index.md  jupyter.md  make-release.md  release-process.md  testing.md
notebooks/: example.ipynb
scripts/: bump_build.py  test_version_bump.sh
src/app/: __init__.py  __main__.py  _logging.py  cli.py
tests/app/: conftest.py  test_cli.py  test_example.py
